--- a/src/meta_sl/metric-based/prototypical_network.ipynb
+++ b/src/meta_sl/metric-based/prototypical_network.ipynb
@@ -16,8 +16,6 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
-    "\n",
-    "# Colab에서 이용하실 때는 \"pip install torchmeta\"을 이용하여 torchmeta를 설치해주세요.\n",
     "from torchmeta.datasets.helpers import omniglot\n",
     "from torchmeta.utils.data import BatchMetaDataLoader\n",
     "from tqdm import tqdm\n",
@@ -74,7 +72,6 @@
     "    test_dataloader = BatchMetaDataLoader(\n",
     "        test_dataset, batch_size=config[\"task_batch_size\"], shuffle=True, num_workers=1\n",
     "    )\n",
-    "\n",
     "    return train_dataloader, val_dataloader, test_dataloader"
    ]
   },
@@ -98,9 +95,9 @@
     "\n",
     "\n",
     "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
-    "    print(\"Load model\")\n",
     "    filename = os.path.join(output_folder, title)\n",
-    "    model.load_state_dict(torch.load(filename))"
+    "    model.load_state_dict(torch.load(filename))\n",
+    "    print(\"Load model\")"
    ]
   },
   {
@@ -246,10 +243,8 @@
     ") -> Tuple[float, float]:\n",
     "    model.eval()\n",
     "\n",
-    "    support_xs = task_batch[\"train\"][0].to(device=device)\n",
-    "    support_ys = task_batch[\"train\"][1].to(device=device)\n",
-    "    query_xs = task_batch[\"test\"][0].to(device=device)\n",
-    "    query_ys = task_batch[\"test\"][1].to(device=device)\n",
+    "    support_xs, support_ys = task_batch[\"train\"]\n",
+    "    query_xs, query_ys = task_batch[\"test\"]\n",
     "\n",
     "    accuracy = torch.tensor(0.0, device=device)\n",
     "\n",
@@ -437,7 +432,7 @@
     "            break\n",
     "\n",
     "        test_accuracy, test_loss = test_proto(\n",
-    "            device=config[\"device\"], task_batch=val_batch, model=model, criterion=criterion\n",
+    "            device=config[\"device\"], task_batch=test_batch, model=model, criterion=criterion\n",
     "        )\n",
     "        sum_test_accuracies += test_accuracy\n",
     "        sum_test_losses += test_loss\n",
