--- a/src/meta_sl/opt-based/maml_classification.ipynb
+++ b/src/meta_sl/opt-based/maml_classification.ipynb
@@ -10,12 +10,11 @@
    "source": [
     "import os\n",
     "import warnings\n",
+    "from typing import Any, Dict, List, Tuple\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "\n",
-    "# Colab에서 이용하실 때는 \"pip install torchmeta\"을 이용하여 torchmeta를 설치해주세요.\n",
     "from torchmeta.datasets.helpers import omniglot\n",
     "from torchmeta.modules import (\n",
     "    MetaBatchNorm2d,\n",
@@ -39,47 +38,48 @@
    },
    "outputs": [],
    "source": [
-    "def get_dataloader(args):\n",
+    "def get_dataloader(\n",
+    "    config: Dict[str, Any]\n",
+    ") -> Tuple[BatchMetaDataLoader, BatchMetaDataLoader, BatchMetaDataLoader]:\n",
     "    train_dataset = omniglot(\n",
-    "        args.folder,\n",
-    "        shots=args.num_shots,\n",
+    "        folder=config[\"folder_name\"],\n",
+    "        shots=config[\"num_shots\"],\n",
     "        # test_shots=1, # default = shots\n",
-    "        ways=args.num_ways,\n",
+    "        ways=config[\"num_ways\"],\n",
     "        shuffle=True,\n",
     "        meta_train=True,\n",
-    "        download=args.download,\n",
+    "        download=config[\"download\"],\n",
     "    )\n",
     "    train_dataloader = BatchMetaDataLoader(\n",
-    "        train_dataset, batch_size=args.task_batch_size, shuffle=True, num_workers=1\n",
-    "    )\n",
-    "\n",
-    "    test_dataset = omniglot(\n",
-    "        args.folder,\n",
-    "        shots=args.num_shots,\n",
-    "        # test_shots=1, # default = shots\n",
-    "        ways=args.num_ways,\n",
-    "        shuffle=True,\n",
-    "        meta_test=True,\n",
-    "        download=args.download,\n",
-    "    )\n",
-    "    test_dataloader = BatchMetaDataLoader(\n",
-    "        test_dataset, batch_size=args.task_batch_size, shuffle=True, num_workers=1\n",
+    "        train_dataset, batch_size=config[\"task_batch_size\"], shuffle=True, num_workers=1\n",
     "    )\n",
     "\n",
     "    val_dataset = omniglot(\n",
-    "        args.folder,\n",
-    "        shots=args.num_shots,\n",
+    "        folder=config[\"folder_name\"],\n",
+    "        shots=config[\"num_shots\"],\n",
     "        # test_shots=1, # default = shots\n",
-    "        ways=args.num_ways,\n",
+    "        ways=config[\"num_ways\"],\n",
     "        shuffle=True,\n",
     "        meta_val=True,\n",
-    "        download=args.download,\n",
+    "        download=config[\"download\"],\n",
     "    )\n",
     "    val_dataloader = BatchMetaDataLoader(\n",
-    "        val_dataset, batch_size=args.task_batch_size, shuffle=True, num_workers=1\n",
+    "        val_dataset, batch_size=config[\"task_batch_size\"], shuffle=True, num_workers=1\n",
     "    )\n",
     "\n",
-    "    return train_dataloader, test_dataloader, val_dataloader"
+    "    test_dataset = omniglot(\n",
+    "        folder=config[\"folder_name\"],\n",
+    "        shots=config[\"num_shots\"],\n",
+    "        # test_shots=1, # default = shots\n",
+    "        ways=config[\"num_ways\"],\n",
+    "        shuffle=True,\n",
+    "        meta_test=True,\n",
+    "        download=config[\"download\"],\n",
+    "    )\n",
+    "    test_dataloader = BatchMetaDataLoader(\n",
+    "        test_dataset, batch_size=config[\"task_batch_size\"], shuffle=True, num_workers=1\n",
+    "    )\n",
+    "    return train_dataloader, val_dataloader, test_dataloader"
    ]
   },
   {
@@ -90,20 +90,21 @@
    },
    "outputs": [],
    "source": [
-    "def save_model(args, model, title):\n",
-    "    if not os.path.isdir(args.output_folder):\n",
-    "        os.mkdir(args.output_folder)\n",
-    "    filename = os.path.join(args.output_folder, title)\n",
+    "def save_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
+    "    if not os.path.isdir(output_folder):\n",
+    "        os.mkdir(output_folder)\n",
+    "    filename = os.path.join(output_folder, title)\n",
+    "\n",
     "    with open(filename, \"wb\") as f:\n",
     "        state_dict = model.state_dict()\n",
     "        torch.save(state_dict, f)\n",
-    "    print(\"model saved in\", filename)\n",
+    "    print(\"Model saved in\", filename)\n",
     "\n",
     "\n",
-    "def load_model(args, model, title):\n",
-    "    filename = os.path.join(args.output_folder, title)\n",
+    "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
+    "    filename = os.path.join(output_folder, title)\n",
     "    model.load_state_dict(torch.load(filename))\n",
-    "    print(\"Load model from \", filename)"
+    "    print(\"Load model\")"
    ]
   },
   {
@@ -114,16 +115,21 @@
    },
    "outputs": [],
    "source": [
-    "def print_graph(train_accuracies, val_accuracies, train_losses, val_losses):\n",
+    "def print_graph(\n",
+    "    train_accuracies: List[float],\n",
+    "    val_accuracies: List[float],\n",
+    "    train_losses: List[float],\n",
+    "    val_losses: List[float],\n",
+    ") -> None:\n",
     "    fig, axs = plt.subplots(1, 2, figsize=(14, 6))\n",
     "\n",
     "    axs[0].plot(train_accuracies, label=\"train_acc\")\n",
-    "    axs[0].plot(val_accuracies, label=\"val_acc\")\n",
+    "    axs[0].plot(val_accuracies, label=\"test_acc\")\n",
     "    axs[0].set_title(\"Accuracy\")\n",
     "    axs[0].legend()\n",
     "\n",
     "    axs[1].plot(train_losses, label=\"train_loss\")\n",
-    "    axs[1].plot(val_losses, label=\"val_loss\")\n",
+    "    axs[1].plot(val_losses, label=\"test_loss\")\n",
     "    axs[1].set_title(\"Loss\")\n",
     "    axs[1].legend()\n",
     "\n",
@@ -261,7 +267,7 @@
    "outputs": [],
    "source": [
     "args = {\n",
-    "    \"folder\": \"dataset\",\n",
+    "    \"folder_name\": \"dataset\",\n",
     "    \"download\": True,\n",
     "    \"num_shots\": 5,\n",
     "    \"num_ways\": 5,\n",
@@ -272,8 +278,10 @@
     "    \"device\": \"cuda\",  # 필수\n",
     "}\n",
     "\n",
-    "train_dataloader, test_dataloader, val_dataloader = get_dataloader(args)\n",
+    "train_dataloader, val_dataloader, test_dataloader = get_dataloader(args)\n",
+    "\n",
     "model = ConvNet(1, args.num_ways).to(device=args.device)\n",
+    "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)"
    ]
@@ -428,11 +436,8 @@
    "name": "MAML_classification.ipynb",
    "provenance": []
   },
-  "interpreter": {
-   "hash": "ef2b83740e6d1e197c68ecdbf2f9e7f9f733327e3d17cdedc8ee6b6b7511e0ac"
-  },
   "kernelspec": {
-   "display_name": "Python 3.8.12 64-bit ('luna_torch': conda)",
+   "display_name": "Python 3.8.8 64-bit ('rl')",
    "language": "python",
    "name": "python3"
   },
@@ -446,9 +451,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "1e00701f8c0a829a96ff452fb5277f0ece3f4e07662fe9989dbbafc0d5cb5571"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 0
