--- a/src/meta_sl/opt-based/maml_regression.ipynb
+++ b/src/meta_sl/opt-based/maml_regression.ipynb
@@ -14,9 +14,7 @@
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torchmeta.modules import MetaBatchNorm2d, MetaModule, MetaSequential\n",
-    "\n",
-    "# Colab에서 이용하실 때는 \"pip install torchmeta\"을 이용하여 torchmeta를 설치해주세요.\n",
+    "from torchmeta.modules import MetaModule, MetaSequential\n",
     "from torchmeta.toy import Sinusoid\n",
     "from torchmeta.utils.data import BatchMetaDataLoader\n",
     "from torchmeta.utils.gradient_based import gradient_update_parameters\n",
@@ -41,13 +39,6 @@
     "    )\n",
     "    train_dataloader = BatchMetaDataLoader(train_dataset, batch_size=args.task_batch_size)\n",
     "\n",
-    "    test_dataset = Sinusoid(\n",
-    "        num_samples_per_task=args.num_shots * 2,\n",
-    "        num_tasks=args.num_task_batch_test * args.task_batch_size,\n",
-    "        noise_std=None,\n",
-    "    )\n",
-    "    test_dataloader = BatchMetaDataLoader(test_dataset, batch_size=args.task_batch_size)\n",
-    "\n",
     "    val_dataset = Sinusoid(\n",
     "        num_samples_per_task=args.num_shots * 2,\n",
     "        num_tasks=args.num_task_batch_train * args.task_batch_size,\n",
@@ -55,7 +46,13 @@
     "    )\n",
     "    val_dataloader = BatchMetaDataLoader(val_dataset, batch_size=args.task_batch_size)\n",
     "\n",
-    "    return train_dataloader, test_dataloader, val_dataloader"
+    "    test_dataset = Sinusoid(\n",
+    "        num_samples_per_task=args.num_shots * 2,\n",
+    "        num_tasks=args.num_task_batch_test * args.task_batch_size,\n",
+    "        noise_std=None,\n",
+    "    )\n",
+    "    test_dataloader = BatchMetaDataLoader(test_dataset, batch_size=args.task_batch_size)\n",
+    "    return train_dataloader, val_dataloader, test_dataloader"
    ]
   },
   {
@@ -66,20 +63,21 @@
    },
    "outputs": [],
    "source": [
-    "def save_model(args, model, title):\n",
-    "    if not os.path.isdir(args.output_folder):\n",
-    "        os.mkdir(args.output_folder)\n",
-    "    filename = os.path.join(args.output_folder, title)\n",
+    "def save_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
+    "    if not os.path.isdir(output_folder):\n",
+    "        os.mkdir(output_folder)\n",
+    "    filename = os.path.join(output_folder, title)\n",
+    "\n",
     "    with open(filename, \"wb\") as f:\n",
     "        state_dict = model.state_dict()\n",
     "        torch.save(state_dict, f)\n",
-    "    print(\"model saved in\", filename)\n",
+    "    print(\"Model saved in\", filename)\n",
     "\n",
     "\n",
-    "def load_model(args, model, title):\n",
-    "    filename = os.path.join(args.output_folder, title)\n",
+    "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
+    "    filename = os.path.join(output_folder, title)\n",
     "    model.load_state_dict(torch.load(filename))\n",
-    "    print(\"Load model from \", filename)"
+    "    print(\"Load model\")"
    ]
   },
   {
@@ -219,8 +217,10 @@
     "    \"device\": \"cuda\",  # 필수\n",
     "}\n",
     "\n",
-    "train_dataloader, test_dataloader, val_dataloader = get_dataloader(args)\n",
+    "train_dataloader, val_dataloader, test_dataloader = get_dataloader(args)\n",
+    "\n",
     "model = FCNet(1, 1).to(device=args.device)\n",
+    "\n",
     "criterion = nn.MSELoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)"
    ]
@@ -356,11 +356,18 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 64-bit ('rl')",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "1e00701f8c0a829a96ff452fb5277f0ece3f4e07662fe9989dbbafc0d5cb5571"
+   }
   }
  },
  "nbformat": 4,
