--- a/src/meta_sl/metric-based/matching_network.ipynb
+++ b/src/meta_sl/metric-based/matching_network.ipynb
@@ -91,13 +91,13 @@
     "    with open(filename, \"wb\") as f:\n",
     "        state_dict = model.state_dict()\n",
     "        torch.save(state_dict, f)\n",
-    "    print(\"Model saved in\", filename)\n",
+    "    print(\"Model is saved in\", filename)\n",
     "\n",
     "\n",
     "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
     "    filename = os.path.join(output_folder, title)\n",
     "    model.load_state_dict(torch.load(filename))\n",
-    "    print(\"Load model\")"
+    "    print(\"Model is loaded\")"
    ]
   },
   {
@@ -164,7 +164,8 @@
     "\n",
     "        self.lstm_cell = nn.LSTMCell(input_size=self.emb_size, hidden_size=self.emb_size)\n",
     "\n",
-    "    def convBlock(self, in_channels: int, out_channels: int, kernel_size: int) -> nn.Sequential:\n",
+    "    @classmethod\n",
+    "    def convBlock(cls, in_channels: int, out_channels: int, kernel_size: int) -> nn.Sequential:\n",
     "        return nn.Sequential(\n",
     "            nn.Conv2d(in_channels, out_channels, kernel_size, padding=1),\n",
     "            nn.BatchNorm2d(out_channels, momentum=1.0, track_running_stats=False),\n",
