--- a/src/meta_sl/opt-based/maml_regression.ipynb
+++ b/src/meta_sl/opt-based/maml_regression.ipynb
@@ -71,13 +71,13 @@
     "    with open(filename, \"wb\") as f:\n",
     "        state_dict = model.state_dict()\n",
     "        torch.save(state_dict, f)\n",
-    "    print(\"Model saved in\", filename)\n",
+    "    print(\"Model is saved in\", filename)\n",
     "\n",
     "\n",
     "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
     "    filename = os.path.join(output_folder, title)\n",
     "    model.load_state_dict(torch.load(filename))\n",
-    "    print(\"Load model\")"
+    "    print(\"Model is loaded\")"
    ]
   },
   {
