--- a/src/meta_sl/model-based/snail.ipynb
+++ b/src/meta_sl/model-based/snail.ipynb
@@ -93,13 +93,13 @@
     "    with open(filename, \"wb\") as f:\n",
     "        state_dict = model.state_dict()\n",
     "        torch.save(state_dict, f)\n",
-    "    print(\"Model saved in\", filename)\n",
+    "    print(\"Model is saved in\", filename)\n",
     "\n",
     "\n",
     "def load_model(output_folder: str, model: nn.Module, title: str) -> None:\n",
     "    filename = os.path.join(output_folder, title)\n",
     "    model.load_state_dict(torch.load(filename))\n",
-    "    print(\"Load model\")"
+    "    print(\"Model is loaded\")"
    ]
   },
   {
@@ -339,7 +339,9 @@
    },
    "outputs": [],
    "source": [
-    "def generate_sequence(task_batch: Dict[str, List[torch.Tensor]], num_ways: int, num_shots: int):\n",
+    "def generate_sequence(\n",
+    "    task_batch: Dict[str, List[torch.Tensor]], num_ways: int, num_shots: int\n",
+    ") -> Tuple[torch.Tensor, torch.Tensor, torch.Tensor]:\n",
     "    support_xs, support_ys = task_batch[\"train\"]\n",
     "    query_xs, query_ys = task_batch[\"test\"]\n",
     "\n",
